[project]
name = "async_adc"
dynamic = ["version"]
dependencies = ["pigpio>=1.78", "pydantic-settings>=2.9.1", "toml>=0.10.2"]

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
bms_gateway = ["*.toml"]

[tool.setuptools_scm]
# No config needed but section must be present

[tool.pyright]
reportUnknownMemberType = "hint"

[tool.ruff.lint]
select = ["ALL"]

[tool.ruff]
line-length = 100
