[project]
dependencies = [
    "pigpio>=1.78",
    "pydantic>=2.11.7",
    "toml>=0.10.2",
]
dynamic = ["version"]
name = "async_adc"
requires-python = ">= 3.10"

[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "setuptools-scm"]

[tool.setuptools.package-data]
bms_gateway = ["*.toml"]

[tool.setuptools_scm]
# No config needed but section must be present

[tool.pyright]
reportUnknownMemberType = "hint"
reportUnusedImport = false       # Is also shown by ruff

# reportAny = "hint"

[tool.ruff.lint]
ignore = [
    "D107",
    "FIX002", # DEBUG: ONLY TEMPORARY, SHOULD BE REMOVED LATER ON
    "TD003",
    "W293",   # Is automatically fixed by the formatter
]
select = ["ALL"]

[tool.ruff]
line-length = 100
